--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,4 +1,8 @@
 onlyBuiltDependencies:
+  - '@tailwindcss/oxide'
   - better-sqlite3
   - electron
+  - electron-winstaller
+  - esbuild
   - lzma-native
+  - msw
