Nettoyage du projet : suppression des anciens fichiers HTML/JS et fichiers de test obsolètes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
     "noUncheckedIndexedAccess": true,
     "exactOptionalPropertyTypes": true,
     "strict": true,
+    "esModuleInterop": true,
 
     // JSX et modules
     "jsx": "react-jsx",
