--- a/package.json
+++ b/package.json
@@ -13,9 +13,28 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "transpile:electron": "tsc --project src/electron/tsconfig.json",
     "dist:mac": "pnpm run transpile:electron && pnpm run build && electron-builder --mac --arm64",
-    "dist:win": "pnpm run transpile:electron && pnpm run build && electron-builder --win --x64",
+    "dist:win": "pnpm run transpile:electron && pnpm run build && electron-builder --config electron-builder.json --win --x64",
     "dist:linux": "pnpm run transpile:electron && pnpm run build && electron-builder --linux --x64"
   },
+
+  "build": {
+  "appId": "com.fondsfamilial.app",
+  "productName": "fonds-familial",
+  "directories": {
+    "buildResources": "build"
+  },
+  "files": [
+    "dist/**/*",
+    "node_modules/**/*",
+    "package.json"
+  ],
+  "win": {
+    "target": "nsis",
+    "artifactName": "fonds-familial.exe"
+  }
+}
+,
+
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -72,6 +91,7 @@
   "devDependencies": {
     "@electron/rebuild": "^4.0.1",
     "@tailwindcss/postcss": "^4.1.11",
+    "@types/bcryptjs": "^3.0.0",
     "@types/node": "^24.2.0",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
@@ -79,7 +99,7 @@
     "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "^10.4.21",
     "cross-env": "^10.0.0",
-    "electron": "^37.2.4",
+    "electron": "^37.2.6",
     "electron-builder": "^26.0.12",
     "electron-rebuild": "^3.2.9",
     "npm-run-all": "^4.1.5",
